fabric8/target/classes/META-INF/fabric8/openshift/product-catalog-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    provider: fabric8
    project: product-catalog
    version: 0.0.1-SNAPSHOT
    group: com.redhat.coolstore
  name: product-catalog
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: product-catalog
